--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
 	"description": "WordPress admin menu page helper class",
 	"type": "library",
 	"license": "BSD-3-Clause",
+	"require": {
+		"cmb2/cmb2": "~2.9"
+	},
 	"autoload": {
 		"psr-4": {
 			"WPHelper\\" : "src/"
