--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "abuyoyo/adminmenupage",
 	"description": "WordPress admin menu page helper class",
 	"type": "library",
+	"version": "0.18",
 	"license": "BSD-3-Clause",
 	"require": {
 		"cmb2/cmb2": "~2.9"
