--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,9 @@
 	"type": "library",
 	"version": "0.18",
 	"license": "BSD-3-Clause",
-	"require": {
-		"cmb2/cmb2": "~2.9"
-	},
 	"suggest": {
-		"abuyoyo/plugincore": "~0.18"
+		"abuyoyo/plugincore": "~0.18",
+		"cmb2/cmb2": "~2.9"
 	},
 	"autoload": {
 		"psr-4": {
