composer.json - require abuyoyo/metabox ~0.8

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
 	"version": "0.28",
 	"time": "2023-10-04",
 	"license": "BSD-3-Clause",
+	"require": {
+		"abuyoyo/metabox": "~0.8"
+	},
 	"suggest": {
 		"abuyoyo/plugincore": "~0.26",
 		"cmb2/cmb2": "~2.9"
