--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 	},
 	"suggest": {
 		"abuyoyo/plugincore": "~0.26",
-		"cmb2/cmb2": "~2.9"
+		"cmb2/cmb2": "^2.9"
 	},
 	"autoload": {
 		"psr-4": {
