composer.json - require PHP >= 8.0

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"time": "2024-10-17",
 	"license": "BSD-3-Clause",
 	"require": {
-		"abuyoyo/metabox": "~0.8"
+		"abuyoyo/metabox": "~0.8",
+		"php": ">=8.0"
 	},
 	"suggest": {
 		"abuyoyo/plugincore": "~0.26",
